fix: adjust atf-content margin for improved layout on smaller screens

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -461,3 +461,8 @@
     line-height: 0.85;
   }
 }
+@media(max-height: 815px) {
+  .atf-content {
+    margin-top: calc(300px - 0.15 * 100vh); // Increases as height decreases
+  }
+}
